comprehensive list of overhead generated files to be excluded from version control for DCDCConverter

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 ECE719_SpecialProblem/*_data_sets*
 DCDCConverter_Ananth/*.mat
 DCDCConverter_Ananth/*.fig
+DCDCConverter_Ananth/*slprj*
+DCDCConverter_Ananth/*_rti1103*
+DCDCConverter_Ananth/*.dsbuildinfo
+DCDCConverter_Ananth/*.map
+DCDCConverter_Ananth/*.ppc
+DCDCConverter_Ananth/*.sdf
+DCDCConverter_Ananth/*.trc
+DCDCConverter_Ananth/*.mex
+DCDCConverter_Ananth/*_usr.c
+DCDCConverter_Ananth/*_usr.mk
+DCDCConverter_Ananth/*.mexw64
